Update and rename zanhua to 2022-07-24-document.md

--- a/_posts/2022-07-24-document.md
+++ b/_posts/2022-07-24-document.md
@@ -1,25 +1,14 @@
 ---
 layout: post
-title: 鬓边春
-date: 2022-07-24
-author: 苏云暮
+title: LOFFER文档
+date: 2019-06-02
+Author: 来自中世界
+categories: 
 tags: [sample, document]
 comments: true
-toc: true
-pinned: true
----
-$$
-\begin{align*}
-y = y(x,t) &= A e^{i\theta} \\
-&= A (\cos \theta + i \sin \theta) \\
-&= A (\cos(kx - \omega t) + i \sin(kx - \omega t)) \\
-&= A\cos(kx - \omega t) + i A\sin(kx - \omega t)  \\
-&= A\cos \Big(\frac{2\pi}{\lambda}x - \frac{2\pi v}{\lambda} t \Big) + i A\sin \Big(\frac{2\pi}{\lambda}x - \frac{2\pi v}{\lambda} t \Big)  \\
-&= A\cos \frac{2\pi}{\lambda} (x - v t) + i A\sin \frac{2\pi}{\lambda} (x - v t)
-\end{align*}
-$$
+--- 
 
-#鬓边春
+# 鬓边春
 
 “这几盆花哪里来的？”狄飞惊处理完六分半堂一上午的事务，一出门便见廊下摆着的几盆花。在他活过的这二十几年里，几乎从未正眼看过什么花草，除非这花有毒，能成为什么克敌的法子，更不用说别人将花端到他面前让他瞧。他看着那红花绿叶，以几乎微不可见的动作皱了皱眉。
 
