Update and rename 2022-07-24-document.md to 2022-05-22-document.md

--- a/_posts/2022-05-22-document.md
+++ b/_posts/2022-05-22-document.md
@@ -1,14 +1,12 @@
 ---
 layout: post
 title: 鬓边春
-date: 2022-07-24
+date: 2022-05-02
 Author: 李熏夕
 categories: 
-tags: [飞云惊暮,sample]
+tags: [飞云惊暮]
 comments: true
 --- 
-
-# 鬓边春
 
 “这几盆花哪里来的？”狄飞惊处理完六分半堂一上午的事务，一出门便见廊下摆着的几盆花。在他活过的这二十几年里，几乎从未正眼看过什么花草，除非这花有毒，能成为什么克敌的法子，更不用说别人将花端到他面前让他瞧。他看着那红花绿叶，以几乎微不可见的动作皱了皱眉。
 
